# PanoramaCreator

./: CMakeLists.txt  README.md
include/: CAdvancedStitcher.hpp  CSimpleStitcher.hpp  Config.hpp
src/: CAdvancedStitcher.cpp  CSimpleStitcher.cpp  Config.cpp  main.cpp
test_project/: CMakeLists.txt  main.cpp
